Cleaned up some code; fixed dark mode formatting; changed column style

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -17,9 +17,123 @@ button {
 	border-radius: 0px;
 }
 
+// --- ADAPTIVE MEDIA QUERIES --- //
+
 @media screen and (max-width: 1024px) {
 	body {
 		font-size: 14px;
+	}
+}
+
+@media screen and (max-width: 850px) {
+	.offset .page {
+		width: 100%;
+		padding-left: 0;
+	}
+	.landing 	.name {
+		text-align: center;
+		h3 {
+			display: none;
+		}
+	}
+
+	.landing button {
+		font-size: 1.6em;
+	}
+
+	#backBtn {
+		height: 60px;
+		width: 100%;
+		background-color: #F5F5F5;
+		&:hover,
+		&:focus {
+		  box-shadow: inset 750px 0 0 0 var(--hover);
+		  color: $bg;
+		}
+		&:active {
+			box-shadow: inset 750px 0 0 0 $title;
+		  color: $bg;
+		}
+	}
+
+	#backBtn.hidden {
+		pointer-events: 0 !important;
+		transform: translateY(-100%);
+	}
+
+	.page.visible {
+		-webkit-transform: translateX(-100%);
+		transform: translateX(-100%);
+	}
+
+	.img-wrap {
+		padding: 20px;
+		overflow: hidden;
+		margin-left: 30px;
+		max-height: 400px;
+		img {
+			width: 50%;
+		}
+	}
+
+	.schedj.img-wrap {
+		text-align: center;
+	}
+
+	.project .text {
+		width: inherit;
+	}
+
+	.project .links div {
+		width: inherit;
+	}
+
+	.page:before { 
+		content: ''; 
+		display: block; 
+		position: relative; 
+		width: 100%; 
+		height: 60px; 
+		margin-top: -60px; 
+	}
+}
+
+@media screen and (min-width: 850px) {
+	#backBtn {
+		height: 100px;
+		width: 100px;
+		background-color: #FFFFFF;
+		&:hover,
+		&:focus {
+		  box-shadow: inset 10em 0 0 0 var(--hover);
+		  color: $bg;
+		}
+		&:active {
+			box-shadow: inset 10em 0 0 0 $title;
+		  color: $bg;
+		}
+	}
+
+	.vertical-line {
+		display: inline-block;
+		background-color: $title;
+		height: 200px;
+		width: 2px;
+		margin-left: 50px;
+		margin-right: 30px;
+	}
+
+	#backBtn.hidden {
+		pointer-events: 0 !important;
+	}
+
+	.img-wrap {
+		float: right;
+		position: absolute;
+		top: 0;
+		width: 200px;
+		right: 0;
+		padding: 20px;
 	}
 }
 
@@ -28,6 +142,7 @@ button {
 		font-size: 12px;
 	}
 }
+
 @media screen and (max-width: 430px) {
 	body .landing .name h1 {
 		font-size: 2.5em;
@@ -37,17 +152,14 @@ button {
 	}
 }
 
-.lightbg {
-	background-color: #F2F2F2;
-}
-
-.landing.pageopen > .landing-wrapper {
-	opacity: 0;
-	pointer-events: none;
-}
-
-.landing.pageopen > img {
-	transform: translateY(100%);
+.landing.pageopen {
+	.landing-wrapper {
+		opacity: 0;
+		pointer-events: none;
+	}
+	img {
+		transform: translateY(100%);
+	}
 }
 
 #backBtn {
@@ -193,9 +305,9 @@ button {
 		  margin-top: 15vh;
 		}
 		.name {
-				top: -20px;
-				position: relative;
-			}
+			top: -20px;
+			position: relative;
+		}
 	}
 	img {
 		max-width: 750px;
@@ -291,115 +403,16 @@ button {
 	}
 }
 
-@media screen and (max-width: 850px) {
-	.landing 	.name {
-		text-align: center;
-		h3 {
-			display: none;
-		}
-	}
-
-	.landing button {
-		font-size: 1.6em;
-	}
-
-	#backBtn {
-		height: 60px;
-		width: 100%;
-		background-color: #F5F5F5;
-		&:hover,
-		&:focus {
-		  box-shadow: inset 750px 0 0 0 var(--hover);
-		  color: $bg;
-		}
-		&:active {
-			box-shadow: inset 750px 0 0 0 $title;
-		  color: $bg;
-		}
-	}
-
-	#backBtn.hidden {
-		pointer-events: 0 !important;
-		transform: translateY(-100%);
-	}
-
-	.page.visible {
-		-webkit-transform: translateX(-100%);
-		transform: translateX(-100%);
-	}
-
-	.img-wrap {
-		padding: 20px;
-		overflow: hidden;
-		margin-left: 30px;
-		max-height: 400px;
-		img {
-			width: 50%;
-		}
-	}
-
-	.schedj.img-wrap {
-		text-align: center;
-	}
-
-	.project .text {
-		width: inherit;
-	}
-
-	.project .links div {
-		width: inherit;
-	}
-
-	.page:before { 
-		content: ''; 
-		display: block; 
-		position: relative; 
-		width: 100%; 
-		height: 60px; 
-		margin-top: -60px; 
+.offset {
+	.page {
+		width: 95%;
+		padding-left: 5%;
 	}
 }
 
-@media screen and (min-width: 850px) {
-	#backBtn {
-		height: 100px;
-		width: 100px;
-		background-color: #FFFFFF;
-		&:hover,
-		&:focus {
-		  box-shadow: inset 10em 0 0 0 var(--hover);
-		  color: $bg;
-		}
-		&:active {
-			box-shadow: inset 10em 0 0 0 $title;
-		  color: $bg;
-		}
-	}
 
-	.vertical-line {
-		display: inline-block;
-		background-color: $title;
-		height: 200px;
-		width: 2px;
-		margin-left: 50px;
-		margin-right: 30px;
-	}
 
-	#backBtn.hidden {
-		pointer-events: 0 !important;
-	}
-
-	.img-wrap {
-		float: right;
-		position: absolute;
-		top: 0;
-		width: 200px;
-		right: 0;
-		padding: 20px;
-	}
-}
-
-// dark theme
+// --- DARK MODE --- //
 body.dark {
 	background-color: #444444;
 }
